# maude-hcs

./: .gitignore  ARTIFACT-APPENDIX.md  CITATION.cff  CP2README.md  DEVELOPER.md  HCSParamsGuide.md  NOTES.md  NOTICE  README-CP2.md  README-baselining.md  README.md  fix_tests.py  make-release.sh  pyproject.toml  runexp.sh  setup.py
CondExpVal/: apmaude.maude  cond-ev-test.maude  smc.maude
docs/: corporate-base.exalidraw  corporate-base.excalidraw  iodine_client_description-v1.1.pseudo.c  iodine_server_description-v1.0.pseudo.c
maude_hcs/: __init__.py  analysis.py  main.py  serialize.py
results_popets/: cp2_scenario_1-hcsconfig-k-1.4_n-3.json  cp2_scenario_1-hcsconfig-k-1.4_n-4.json  cp2_scenario_1-hcsconfig-k-1.6_n-4.json  cp2_scenario_1-hcsconfig-k-1.8_n-4.json  cp2_scenario_1-hcsconfig-k-2.0_n-5.json  cp2_scenario_10-hcsconfig-k-1.2_n-4.json  cp2_scenario_10-hcsconfig-k-1.2_n-5.json  cp2_scenario_10-hcsconfig-k-1.4_n-3.json  cp2_scenario_10-hcsconfig-k-1.4_n-5.json  cp2_scenario_10-hcsconfig-k-1.6_n-3.json  cp2_scenario_10-hcsconfig-k-2.0_n-5.json  cp2_scenario_10_ma1_baseline.json  cp2_scenario_10_ma1_baseline_tgenonly.json  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-0  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-1  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-10  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-11  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-12  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-13  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-14  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-15  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-2  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-3  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-4  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-5  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-6  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-7  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-8  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3.dat.4369-9  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-0  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-1  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-10  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-11  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-12  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-13  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-14  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-15  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-2  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-3  cp2_scenario_10_ma1_baselinecp2_scenario_10-hcsconfig-k-1.2_n-3_tgenonly.dat.9067-4  (+1795 more)
results_popets_v2/: cp2_scenario_1-hcsconfig-k-1.2_n-3.json  cp2_scenario_1-hcsconfig-k-1.2_n-4.json  cp2_scenario_1-hcsconfig-k-1.2_n-5.json  cp2_scenario_1-hcsconfig-k-1.4_n-5.json  cp2_scenario_1-hcsconfig-k-1.6_n-3.json  cp2_scenario_1-hcsconfig-k-1.6_n-5.json  cp2_scenario_1-hcsconfig-k-1.8_n-3.json  cp2_scenario_1-hcsconfig-k-1.8_n-5.json  cp2_scenario_1-hcsconfig-k-2.0_n-3.json  cp2_scenario_1-hcsconfig-k-2.0_n-4.json  cp2_scenario_10-hcsconfig-k-1.4_n-4.json  cp2_scenario_10-hcsconfig-k-1.6_n-4.json  cp2_scenario_10-hcsconfig-k-1.6_n-5.json  cp2_scenario_10-hcsconfig-k-1.8_n-3.json  cp2_scenario_10-hcsconfig-k-1.8_n-4.json  cp2_scenario_10-hcsconfig-k-1.8_n-5.json  cp2_scenario_10-hcsconfig-k-2.0_n-3.json  cp2_scenario_10-hcsconfig-k-2.0_n-4.json  (+2587 more)
(+3042 files in other folders)
