# pyproject.toml

[build-system]
# Specify the build backend (setuptools is common for projects converting from setup.py)
requires = ["setuptools>=61.0"] # Minimum version of setuptools needed
build-backend = "setuptools.build_meta"

[project]
# Core metadata (PEP 621)
name = "maude_hcs"
version = "0.1.0"
description = "Maude for hidden communicaiton systems"
readme = "README.md" # Assumes README.md exists, automatically sets content type based on extension
authors = [
    {name = "Khoury, Joud", email = "joud.khoury@rtx.com"},
    {name = "Kim, Minyoung", email = "minyoung.kim@sri.com"},
    {name = "Merlin, Christophe", email = "christophe.merlin@rtx.com"},
    {name = "Talcott, Carolyn", email = "carolyn.talcott@sri.com"},    
]
requires-python = ">=3.12.4"

# Dependencies
dependencies = [
    "argparse==1.4.0",
    "argcomplete==3.4.0",
    "scipy==1.15.2",
    "maude==1.5.0",
    "umaudemc==0.14.0",
    "z3-solver==4.8.12",
    "PyYAML==6.0.1",
    "dns"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.1",
]

# Project URLs (replaces 'url' and can add others)
[project.urls]
Homepage = "https://github.com/jkhourybbn/maude-hcs"
Repository = "https://github.com/jkhourybbn/maude-hcs" # Often same as Homepage
# Documentation = "https://maude-hcs.readthedocs.io/" # Example

# Entry points (console scripts)
[project.scripts]
maude-hcs = "maude_hcs.main:main"

[tool.setuptools.packages.find]
exclude = ["results", "build"]