# MAUDE_HCS: maude_hcs
#
# Software Markings (UNCLASS)
# PWNDD Software
#
# Copyright (C) 2025 RTX BBN Technologies Inc. All Rights Reserved
#
# Contract No: HR00112590083
# Contractor Name: RTX BBN Technologies Inc.
# Contractor Address: 10 Moulton Street, Cambridge, Massachusetts 02138
#
# The U.S. Government's rights to use, modify, reproduce, release, perform,
# display, or disclose these technical data and software are defined in the
# Article VII: Data Rights clause of the OTA.
#
# This document does not contain technology or technical data controlled under
# either the U.S. International Traffic in Arms Regulations or the U.S. Export
# Administration Regulations.
#
# DISTRIBUTION STATEMENT A: Approved for public release; distribution is
# unlimited.
#
# Notice: Markings. Any reproduction of this computer software, computer
# software documentation, or portions thereof must also reproduce the markings
# contained herein.
#
# MAUDE_HCS: end

# pyproject.toml

[build-system]
# Specify the build backend (setuptools is common for projects converting from setup.py)
requires = ["setuptools>=61.0"] # Minimum version of setuptools needed
build-backend = "setuptools.build_meta"

[project]
# Core metadata (PEP 621)
name = "maude_hcs"
version = "0.1.0"
description = "Maude for hidden communicaiton systems"
readme = "README.md" # Assumes README.md exists, automatically sets content type based on extension
authors = [
    {name = "Khoury, Joud", email = "joud.khoury@rtx.com"},
    {name = "Kim, Minyoung", email = "minyoung.kim@sri.com"},
    {name = "Merlin, Christophe", email = "christophe.merlin@rtx.com"},
    {name = "Talcott, Carolyn", email = "carolyn.talcott@sri.com"},    
]
requires-python = ">=3.12.4"

# Dependencies
dependencies = [
    "argparse==1.4.0",
    "argcomplete==3.4.0",
    "dataclasses==0.6",
    "dataclasses-json==0.6.7",
    "scipy==1.15.2",
    "maude==1.5.0",
    "umaudemc==0.16.0",
    "PyYAML==6.0.1",
    "networkx==3.4.2",
    "matplotlib==3.10.3",
    "dns"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.1",
]

# Project URLs (replaces 'url' and can add others)
[project.urls]
Homepage = "https://github.com/jkhourybbn/maude-hcs"
Repository = "https://github.com/jkhourybbn/maude-hcs" # Often same as Homepage
# Documentation = "https://maude-hcs.readthedocs.io/" # Example

# Entry points (console scripts)
[project.scripts]
maude-hcs = "maude_hcs.main:main"

[tool.setuptools.packages.find]
exclude = ["results", "build"]
